<resources>
    <string name="app_name">AbDisc</string>
    <string name="app_name_debug">AbDisc Debug</string>

    <string name="label_step_count">Step Count</string>
    <string name="label_crunch_session">Crunch Sessions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_title">Error</string>
    <string name="error_no_bluetooth">Bluetooth device not detected</string>
    <string name="error_app_state">must implement AppState interface</string>
    <string name="label_profile_main_header">YOUR PROFILE</string>
    <string name="label_profile_name">Ab-Disc Name</string>
    <string name="label_profile_email">EMAIL</string>
    <string name="label_profile_facebook">Facebook</string>
    <string name="label_profile_twitter">Twitter</string>
    <string name="label_profile_password">Password</string>
    <string name="label_profile_ab_disc_mode">AB-DISC MODE</string>
    <string name="label_profile_ab_disc_device">AB-DISC Device</string>
    <string name="label_profile_data_header">YOUR DATA</string>
    <string name="label_profile_height">Height</string>
    <string name="label_profile_weight">Weight</string>
    <string name="label_profile_age">Age</string>
    <string name="label_profile_gender">Gender</string>
    <string name="label_profile_gender_male">Male</string>
    <string name="label_profile_gender_female">Female</string>
    <string name="label_profile_stride">Stride</string>
    <string name="label_profile_mode_crunch">Crunch</string>
    <string name="label_profile_mode_posture">Posture</string>
    <string name="label_profile_feet">\'</string>
    <string name="label_profile_inches">\"</string>
    <string name="label_profile_in_pounds"> In Pounds</string>
    <string name="label_profile_ok">OK</string>
    <string name="label_profile_cancel">Cancel</string>
    <string name="label_profile_crop">Crop</string>
    <string name="label_profile_yes">Yes</string>
    <string name="label_profile_no">No</string>
    <string name="label_profile_pounds">lbs</string>
    <string name="label_profile_use_auto">Use Automatic Settings</string>
    <string name="label_profile_yes_no_text_stride">Your stride length is calculated according to your height.  Do you wish to override that value?</string>
    <string name="label_profile_steps">Steps</string>
    <string name="label_profile_your_goals">YOUR GOALS</string>
    <string name="label_profile_yes_no_steps">Your Steps goal is calculated according to your age, and assumes a \"moderate\" fitness level.  It will be automatically adjusted as you use your Ab-Disc, or you can change it manually.</string>
    <string name="label_profile_crunch_sessions">Crunch Sessions</string>
    <string name="label_profile_posture_sessions">Posture Sessions</string>
    <string name="label_profile_calories">Calories</string>
    <string name="label_profile_yes_no_text_sessions">This value will be automatically adjusted as you use your Ab-Disc, or you can change it manually</string>
    <string name="label_profile_no_edit_calories_text">\'Calories\' is calculated from your Steps, Stride, Weight and Gender.</string>
    <string-array name="height_feet">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="height_inches">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="label_graph_day">Day</string>
    <string name="label_graph_week">Week</string>
    <string name="label_graph_month">Month</string>
    <string name="label_graph_year">Year</string>
    <string name="label_graph_total_active_minutes">Active Minutes So Far Today</string>
    <string name="label_graph_total_intense_active_minutes">Intense Active Minutes</string>
    <string name="label_graph_steps_to_goal">Steps To Goal</string>
    <string name="label_graph_steps_today">Steps Today</string>
    <string name="label_graph_of_goal">Of Goal</string>
    <string name="label_graph_distance">Distance</string>
    <string name="label_graph_posture">p o s t u r e</string>
    <string name="label_graph_crunch">c r u n c h</string>
    <string name="label_graph_sessions">s e s s i o n s</string>
    <string name="label_graph_today">t o d a y</string>
    <string name="label_connect_description">Select MetaWear from device list</string>
    <string name="label_connected_metawear">Connected</string>
    <string name="label_disconnected_metawear">Disconnected</string>
    <string name="label_disconnect_description">Close Bluetooth connection</string>
    <string name="label_forget_metawear">Forget </string>
</resources>
