<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="1400dp"
    android:background="@color/ColorDrawerBackground"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/start_debug_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_manage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/connect_metawear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/stat_sys_data_bluetooth" />
        <TextView
            android:id="@+id/connect_metawear_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_connect_description"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/disconnect_metawear"
            android:src="@android:drawable/ic_delete" />

        <TextView
            android:id="@+id/disconnect_metawear_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_disconnect_description"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/forget_metawear"
        style="@style/AppPreferencePopupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

    <ImageButton
        android:id="@+id/upload_filter_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_upload" />

    <TextView
        android:id="@+id/profileOption"
        style="@style/AppPreferencePopupName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/label_profile_main_header" />

    <ImageButton
        android:id="@+id/sync_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_popup_sync"/>

    <Switch
        android:id="@+id/testData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test Data" />

    <Button
        android:id="@+id/populateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Generate Test Data" />

    <TextView
        android:id="@+id/connected_status"
        style="@style/AppPreferencePopupName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/label_disconnected_metawear" />

</LinearLayout>