<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffcecece"
        android:orientation="vertical">

       <LinearLayout
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:padding="6dp"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/head_photo"
                android:layout_width="0dp"
                android:layout_gravity="right"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:paddingLeft="14dp" />
            <TextView
                android:id="@+id/persons_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Stephen Colbert"
                style="@style/AppPreferencePerson"
                android:paddingLeft="5dp"
                android:layout_weight=".7"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/profileHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_profile_main_header"
                android:textAppearance="@style/AppPreferenceTitle" />

            <LinearLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/nameLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_name" />

                <TextView
                    android:id="@+id/nameEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:text="@string/label_profile_name" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/emailLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_email" />

                <TextView
                    android:id="@+id/emailEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_email" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/facebookLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_facebook" />

                <TextView
                    android:id="@+id/facebookEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_facebook" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/twitterLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_twitter" />

                <TextView
                    android:id="@+id/twitterEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_twitter" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/passwordLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_password" />

                <TextView
                    android:id="@+id/passwordEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@string/label_profile_password" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/abDiskMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/abDiskModeLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_ab_disc_mode" />

                <TextView
                    android:id="@+id/abDiskModeEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:text="@string/label_profile_ab_disc_mode" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/abDiscDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/abDiscDeviceLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_ab_disc_device" />

                <TextView
                    android:id="@+id/abDiscDeviceEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_ab_disc_device" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/dataHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_profile_main_header"
                android:textAppearance="@style/AppPreferenceTitle" />

            <LinearLayout
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/heightLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_height" />

                <TextView
                    android:id="@+id/heightEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_height" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/weightLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_weight" />

                <TextView
                    android:id="@+id/weightEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_weight" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/ageLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_age" />

                <TextView
                    android:id="@+id/ageEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_age" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/genderLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_gender" />

                <TextView
                    android:id="@+id/genderEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_gender" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/stride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/strideLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_stride" />

                <TextView
                    android:id="@+id/strideEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_stride" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/goals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/goalsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_profile_your_goals"
                android:textAppearance="@style/AppPreferenceTitle" />

            <LinearLayout
                android:id="@+id/steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/stepsLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_steps" />

                <TextView
                    android:id="@+id/stepsEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_steps" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sessions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/sessionsLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_crunch_sessions" />

                <TextView
                    android:id="@+id/sessionsEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_crunch_sessions" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/caloriesLabel"
                    style="@style/AppPreferenceName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_profile_calories" />

                <TextView
                    android:id="@+id/caloriesEntry"
                    style="@style/AppPreferenceEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>